--- a/csPage.html
+++ b/csPage.html
@@ -220,6 +220,144 @@
               </button>
             </div>
           </td>
+          <td class="book" onclick="window.location.href='PAJ.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Programming with Alice & Java
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: John Lewis & Peter Depasquale
+                </span>
+                <br>
+                <span class="cost">
+                  $10.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Programming with Alice & Java', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='PAJ.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book26(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      An Introduction to Programming using Alice
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Charles W. Herbert
+                </span>
+                <br>
+                <span class="cost">
+                  $15.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('An Introduction to Programming using Alice', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="book" onclick="window.location.href='JP.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Java Programming Second Edition
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Joseph P. Russell
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Java Programming Second Edition', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='PL.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Programming Logic
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Marjorie M. Leeson
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Programming Logic', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
         </tr>
       </table>
     </section>
