--- a/sorter.html
+++ b/sorter.html
@@ -262,7 +262,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book1(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -294,7 +294,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -328,7 +328,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -364,7 +364,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -399,7 +399,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -433,7 +433,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -472,7 +472,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -506,7 +506,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -543,7 +543,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -579,7 +579,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book18(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book18(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -614,7 +614,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book20(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book20(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -649,7 +649,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book19(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book19(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -685,7 +685,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book10(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -719,7 +719,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book11(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -753,7 +753,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book12(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -789,7 +789,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book13(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -823,7 +823,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book14(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -857,7 +857,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book15(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -894,7 +894,7 @@
               <br>
               <br>
               <br>
-              <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book16(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -931,7 +931,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book17(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -965,7 +965,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book21(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book21(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -1001,7 +1001,7 @@
               </span>
               <br>
               <br>
-              <img src="resources/book22(1).jpg" style="max-width: 70%; max-height: auto;">
+              <img loading="lazy" ="resources/book22(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
                 <span class="title">
@@ -1021,6 +1021,214 @@
                 </span>
               </span>
               <button onclick="localStorage.setItem('Computing Concepts With C++ Essentials', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='PS.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img loading="lazy" ="resources/book23(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Problem Solving The Object of Programming
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Walter Savitch
+                </span>
+                <br>
+                <span class="cost">
+                  $15.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Problem Solving The Object of Programming', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='JM.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book24(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Java Methods An Intoduction to Object Orientated Programming
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Maria Litvin & Gary Litvin
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Java Methods An Intoduction to Object Orientated Programming', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="book" onclick="window.location.href='PAJ.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Programming with Alice & Java
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: John Lewis & Peter Depasquale
+                </span>
+                <br>
+                <span class="cost">
+                  $10.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Programming with Alice & Java', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='PAJ.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book26(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      An Introduction to Programming using Alice
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Charles W. Herbert
+                </span>
+                <br>
+                <span class="cost">
+                  $15.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('An Introduction to Programming using Alice', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+          <td class="book" onclick="window.location.href='JP.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Java Programming Second Edition
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Joseph P. Russell
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Java Programming Second Edition', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td class="book" onclick="window.location.href='PL.html';">
+            <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic CompSci">
+                Computer Science
+              </span>
+              <br>
+              <br>
+              <img src="resources/book27(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Programming Logic
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther Brian_Ritchie">
+                  By: Marjorie M. Leeson
+                </span>
+                <br>
+                <span class="cost">
+                  $25.00
+                </span>
+              </span>
+              <button onclick="localStorage.setItem('Programming Logic', 1);alert('Added to your cart');">
                 Add to Cart
               </button>
             </div>
