--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       </div>
     </nav>
     <hr>
+    <p>
+      Here to make people like science a little more.
+    </p>
     <table style="padding:5px;width:100%;background-color:#fea004;">
       <tr>
           <td style="padding:5px;text-align:center;">
