--- a/TCL.html
+++ b/TCL.html
@@ -114,7 +114,13 @@
                 By: Brian W. Kernighan & Dennis M. Ritchie
               </h3>
               <hr>
-              <p id="bookDescription"></p>
+              <p id="bookDescription">
+                The authors present the complete guide to ANSI standard C language programming. Written by the developers of C, this new version helps readers keep up with the finalized ANSI standard for C 
+                while showing how to take advantage of C's rich set of operators, economy of expression, improved control flow, and data structures. The 2/E has been completely rewritten with additional examples 
+                and problem sets to clarify the implementation of difficult language constructs. For years, C programmers have let K&R guide them to building well-structured and efficient programs. Now this same 
+                help is available to those working with ANSI compilers. Includes detailed coverage of the C language plus the official C language reference manual for at-a-glance help with syntax notation, declarations, 
+                ANSI changes, scope rules, and the list goes on and on.
+              </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
                   onclick="localStorage.setItem('The C Programming Language', '1');alert('added to your cart');">
