--- a/JP.html
+++ b/JP.html
@@ -115,7 +115,8 @@
               </h3>
               <hr>
               <p id="bookDescription">
-                
+                Java Programming, Second Edition, offers all of the dynamic elements of the first edition, plus many exciting changes! This text is designed for first-time programmers, but is also 
+                appropriate for those building on experiences in another programming language.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
