--- a/PS.html
+++ b/PS.html
@@ -115,7 +115,9 @@
               </h3>
               <hr>
               <p id="bookDescription">
-                
+                This is the world's leading book for teaching introductory programming concepts and C++ to novices. This book teaches readers how to define their own classes early, while ensuring a solid understanding of 
+                basic tools such as simple control structures and function definitions. It takes a measured approach to classes, teaching how to write some simple classes, then adds constructors, then overloading 
+                simple operators, then overloading the I/O operators <>, and so forth. Anyone beginning to program with C++.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
