--- a/PAJ.html
+++ b/PAJ.html
@@ -115,7 +115,11 @@
               </h3>
               <hr>
               <p id="bookDescription">
-                
+                To ease readers into Java, Programming with Alice and Javaintertwines the ideas of object-oriented programming in both languages. Programming in Alice is explored first to establish fundamental 
+                principles and skills using 3D animations in a fun, visually rich environment. With Alice as a foundation, Chapter 6 introduces readers to Java. The remaining chapters implement concepts in the 
+                Java programming language using interesting examples and drawing parallels between the two languages to keep readers engaged. Alice: Objects; Methods and Data; Control Statements; Events; 
+                Lists and Arrays. Java: Objects and Classes; Events; Lists and Arrays; Inheritance; Exceptions and I/O; Recursion. For all readers interested in an introduction to programming using Alice 
+                and Java.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
