--- a/JM.html
+++ b/JM.html
@@ -115,7 +115,8 @@
               </h3>
               <hr>
               <p id="bookDescription">
-                
+                Java Methods introduces the concepts, case studies, and examples relevant to object-oriented programming of applets and applications with graphical user interfaces in Java. The Java 2 platform with 
+                swing is used in all examples. This book has been used for introductory computer programming courses and has helped many readers learn Java and OOP concepts on their own.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
