--- a/IPA.html
+++ b/IPA.html
@@ -115,7 +115,9 @@
               </h3>
               <hr>
               <p id="bookDescription">
-                
+                Alice: An Introduction to Programming Using Alice is designed to make learning programming easy for the novice user, with the help of Alice. Object-oriented programming can be much more challenging 
+                to learn than traditional programming. Alice is a software tool that was developed to help teach object-oriented programming in a less syntax-intensive and highly motivating environment. 
+                It addresses some of the barriers that currently prevent many students from successfully learning to program.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
